--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ navbar-links:
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "cindybhuynh55@gmail.com"
-#  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+#  rss: true remove this line if you don't want to show an RSS link at the bottom
   github: cindybhuynh
 #  youtube: "@daattali"
 #  whatsapp: 15551212
@@ -83,7 +83,7 @@ social-network-links:
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+# rss-description: This website is a virtual proof that I'm awesome
 
 ###########################
 # --- General options --- #
