--- a/_config.yml
+++ b/_config.yml
@@ -134,15 +134,15 @@ navbar-var-length: false
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 page-col: "#FFFFFF"
-text-col: "#7880B5"
+text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#6BBAEC"
 navbar-col: "#BCC4DB"
-navbar-text-col: "#7880B5"
+navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
 footer-col: "#BCC4DB"
 footer-text-col: "#777777"
-footer-link-col: "#7880B5"
+footer-link-col: "#404040"
 footer-hover-col: "#6BBAEC"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
