--- a/_config.yml
+++ b/_config.yml
@@ -137,10 +137,10 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#62B5D0"
-navbar-col: "#C1E2F0"
+navbar-col: "#B6C8E1"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "#C1E2F0"
+footer-col: "#B6C8E1"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#62B5D0"
